Update DataFile.java Make File Instance Refactor All File Dependency Class & Method